--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -2,8 +2,8 @@
   <div class="header-container">
     <!-- Logo + Title -->
     <a routerLink="/" class="logo-title" (click)="closeDropdown()">
-      <img src="assets/images/form-logo.webp" alt="Bath Logo" class="logo" />
-      <span class="title">Bath Quote</span>
+      <img src="assets/images/form-logo.webp" alt="Siding Logo" class="logo" />
+      <span class="title">Siding Quote</span>
     </a>
 
     <!-- Desktop Navigation -->
