--- a/src/app/layout/policies/company-policy/company-policy.html
+++ b/src/app/layout/policies/company-policy/company-policy.html
@@ -10,7 +10,7 @@
     <p>
       This California Privacy Notice supplements the information contained in our general Privacy Policy and applies
       solely to those visitors and users that are residents of the State of California (“consumer” or “you”).
-      <strong>Bath Quote</strong> (“we”, “us”, “our”) adopts this notice to comply with the California Consumer
+      <strong>Siding Quote</strong> (“we”, “us”, “our”) adopts this notice to comply with the California Consumer
       Privacy Act of 2018 (“CCPA”), as amended, and other California privacy laws. Any terms defined by the CCPA have
       the same meaning when used in this notice.
     </p>
@@ -76,7 +76,7 @@
 
     <h2>Contact Information</h2>
     <address class="contact-block">
-      <div><strong>Email:</strong> <a href="mailto:info@bathquote.com">info@bathquote.com</a></div>
+      <div><strong>Email:</strong> <a href="mailto:info@sidingquote.com">info@sidingquote.com</a></div>
       <div><strong>Postal Address:</strong> 8 THE Green Street B, Kent, DE, Dover, 19901</div>
     </address>
   </article>
