--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
   <div class="footer-container">
-    <p>© {{ currentYear }} Bath Quote. All rights reserved.</p>
+    <p>© {{ currentYear }} Siding Quote. All rights reserved.</p>
   </div>
 </footer>
