--- a/src/app/layout/policies/privacy-policy/privacy-policy.html
+++ b/src/app/layout/policies/privacy-policy/privacy-policy.html
@@ -10,7 +10,7 @@
   <h2>Consumer Privacy</h2>
   <p>
     We are committed to providing users a friendly and safe environment for providing consumer data. 
-    This Privacy Policy discloses the privacy practices of Bath Quote and governs the use of this 
+    This Privacy Policy discloses the privacy practices of Siding Quote and governs the use of this 
     platform by users (“you” or “your”). It explains what information we collect, how we secure it, 
     and how we use and share it.
   </p>
@@ -63,7 +63,7 @@
 
   <h2>Unsubscribe, Opt-Out or Revoke</h2>
   <p>
-    Email us at <a href="mailto:info@bathquote.com">info@bathquote.com</a>
+    Email us at <a href="mailto:info@sidingquote.com">info@sidingquote.com</a>
     to revoke consent or unsubscribe.
   </p>
 
@@ -80,6 +80,6 @@
   </p>
 
   <h2>Contact Information</h2>
-  <p>Email: <a href="mailto:info@bathquote.com">info@bathquote.com</a></p>
+  <p>Email: <a href="mailto:info@sidingquote.com">info@sidingquote.com</a></p>
   <p>Address: 8 THE Green Street B, Kent, DE, Dover, 19901</p>
 </div>
