--- a/src/app/pages/faq/faq.html
+++ b/src/app/pages/faq/faq.html
@@ -1,7 +1,7 @@
 <div class="faq-container">
   <div class="faq-header">
     <h1>Frequently Asked Questions</h1>
-    <p>Find answers to common questions about our bath quote service</p>
+    <p>Find answers to common questions about our Siding quote service</p>
   </div>
 
   <div class="faq-list">
